test_suite/alan-2022-examples/failing/000790_mutation.alan
source t begin boolean function; relax end
